base: Bump vitepress version to alpha.60 and fix overflow issues

--- a/src/.vitepress/theme/styles/mathjax3.css
+++ b/src/.vitepress/theme/styles/mathjax3.css
@@ -1,7 +1,8 @@
 mjx-container {
     display: inline-block;
     margin: auto 2px -2px;
-    overflow: auto;
+    overflow-x: auto;
+    overflow-y: hidden;
 }
 
 mjx-container > svg {
